versions/v3.6.0/doxygen/html/imx8qxp-pinctrl_8h.md
---
version: v3.6.0
source_url: https://raw.githubusercontent.com/zephyrproject-rtos/zephyr/3.6.0/doc/doxygen/html/imx8qxp-pinctrl_8h.html
original_path: doxygen/html/imx8qxp-pinctrl_8h.html
---

| Logo | Zephyr API Documentation  3.6.0  A Scalable Open Source RTOS |
| --- | --- |

Loading...

Searching...

No Matches

imx8qxp-pinctrl.h File Reference

[Go to the source code of this file.](imx8qxp-pinctrl_8h_source.md)

| Macros | |
| --- | --- |
| #define | [SC\_P\_UART2\_TX](#a439d8a14a740c03a41d84a3f58d2d64f)   113 |
| #define | [SC\_P\_UART2\_RX](#a42bb2e2da91a5928dda46bba414ac396)   114 |
| #define | [IMX8QXP\_DMA\_LPUART2\_RX\_UART2\_RX](#a7b942182de88baca5cd8da3715048750)   0 /\* UART2\_RX ---> DMA\_LPUART2\_RX \*/ |
| #define | [IMX8QXP\_DMA\_LPUART2\_TX\_UART2\_TX](#ac3cca516631d1c243db966e16b4f7b3c)   0 /\* DMA\_LPUART2\_TX ---> UART2\_TX \*/ |

## Macro Definition Documentation

## [◆ ](#a7b942182de88baca5cd8da3715048750)IMX8QXP\_DMA\_LPUART2\_RX\_UART2\_RX

| #define IMX8QXP\_DMA\_LPUART2\_RX\_UART2\_RX   0 /\* UART2\_RX ---> DMA\_LPUART2\_RX \*/ |
| --- |

## [◆ ](#ac3cca516631d1c243db966e16b4f7b3c)IMX8QXP\_DMA\_LPUART2\_TX\_UART2\_TX

| #define IMX8QXP\_DMA\_LPUART2\_TX\_UART2\_TX   0 /\* DMA\_LPUART2\_TX ---> UART2\_TX \*/ |
| --- |

## [◆ ](#a42bb2e2da91a5928dda46bba414ac396)SC\_P\_UART2\_RX

| #define SC\_P\_UART2\_RX   114 |
| --- |

## [◆ ](#a439d8a14a740c03a41d84a3f58d2d64f)SC\_P\_UART2\_TX

| #define SC\_P\_UART2\_TX   113 |
| --- |

- [zephyr](dir_6cbb653dcd0745b39bd039f02ad5bff5.md)
- [dt-bindings](dir_2e4d86f9d28357ce2f99093c0845149c.md)
- [pinctrl](dir_2c6c4fbd167577104b7f1b7148586168.md)
- [imx8qxp-pinctrl.h](imx8qxp-pinctrl_8h.md)
- Generated on  for Zephyr API Documentation by [![doxygen](https://docs.zephyrproject.org/3.6.0/doxygen/html/doxygen.svg)](https://www.doxygen.org/index.html) 1.16.1
